--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -41,7 +41,6 @@
   font-style: italic;
   font-weight: 400;
   color: #121417;
-  margin-bottom: 32px;
 }
 
 .text {
